fix optionals and lambdas